--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,8 @@
 
                 <nav class="nav">
                     <a class="nav__link" href="index.html">Home page</a>
-                    <a class="nav__link" href="#">Privacy Policy</a>
+                    <a class="nav__link active" href="blog.html">News</a>
+                    <a class="nav__link" href="text.html">Privacy Policy</a>
                     <a class="nav__link" href="#">Terma &amp Conditions</a>
                 </nav>
             </div>
