--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
             </address>
             <nav class="footer__nav">
                 <a href="#">Terms &amp; Contidions</a>
-                <a href="#">Privacy Policy</a>
+                <a href="text.html">Privacy Policy</a>
                 <a href="#">Our blog</a>
             </nav>
         </div><!--/. container -->
