--- a/text.html
+++ b/text.html
@@ -27,44 +27,50 @@
     </header>
 
     <!-- Intro -->
-    <div class="intro  intro--blog"></div>
+    <div class="intro   intro--text"></div>
 
-    <!-- Main -->
+    <!-- Text -->
     <section class="section">
         <div class="container">
-            <main class="main">
-                <div class="main__col main__col--text">
-                    <h1 class="section__title"><span>Privacy</span> Policy</h1>
+            <h1 class="section__title"><span>Privacy</span> Policy</h1>
 
-                    <div class="articles  articles--column">
-                        <article class="articles__item">
-                            <h4 class="articles__title">
-                                <a href="#">News title</a>
-                            </h4>
-                            <div class="articles__text">
-                                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-                                invidunt
-                                ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
-                                justo duo
-                                dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
-                                dolor
-                                sit amet.
-                            </div>
-                           
+            <div class="text">
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy).
+                </p>
+                <h3>Some subtitle</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, remaining essentially unchanged. It was popularised in the 1960s.
+                </p>
+                <ul>
+                    <li>- unordered list item</li>
+                    <li>- unordered list item</li>
+                    <li>- unordered list item</li>
+                </ul>
 
-                        </article>
+                <p>
+                    <img src="assets/images/text-bg.jpg" alt="">
+                </p>
 
-                    </div>
+                <hr>
 
-                    <a class="btn  btn--orange" href="index.html">Back to home</a>
-                </div>
-            </main>
+                <h4>Some subtitle</h4>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
+                </p>
+                <ol>
+                    <li>unordered list item</li>
+                    <li>unordered list item</li>
+                    <li>unordered list item</li>
+                </ol>
+                
+            </div><!--/. Text  -->
+
+            <a class="btn  btn--orange" href="index.html">Back to home</a>
+
         </div><!--/. Container -->
     </section>
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="container">
+        <div class="container"> 
             <img src="assets/images/logo-black.svg" alt="">
             <address class="footer__contacts">
                 <p>New York, Street, ZIP code</p>
@@ -73,7 +79,7 @@
             </address>
             <nav class="footer__nav">
                 <a href="#">Terms &amp; Contidions</a>
-                <a href="#">Privacy Policy</a>
+                <a href="text.html">Privacy Policy</a>
                 <a href="#">Our blog</a>
             </nav>
         </div><!--/. container -->
