--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900|PT+Sans&display=swap&subset=cyrillic"
         rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CenterLogistic</title>
 </head>
 
@@ -14,7 +15,7 @@
     <header class="header">
         <div class="container">
             <div class="header__inner">
-                <a href="index.html"><img src="assets/images/logo.svg" alt="CenterLogistic"></a>
+                <a href="index.html"><img class="img" src="assets/images/logo.svg" alt="CenterLogistic"></a>
 
                 <nav class="nav">
                     <a class="nav__link active" href="#">Services</a>
@@ -24,6 +25,9 @@
                     <a class="nav__link" href="blog.html">News</a>
                     <a class="nav__link" href="#">Contact Us</a>
                 </nav>
+
+                <button class="burger" type="button"><img class="burger__icon" src="assets/images/burger.svg" alt=""></button> 
+
             </div>
         </div>
     </header>
@@ -144,42 +148,42 @@
                     <ul class="clients__list">
                         <li>
                             <a href="#" target="_blank">
-                                <img src="assets/images/clients/atica.svg" alt="">
+                                <img class="img" src="assets/images/clients/atica.svg" alt="">
                             </a>
                         </li>
                         <li>
                             <a href="#" target="_blank">
-                                <img src="assets/images/clients/hex-lab.svg" alt="">
+                                <img class="img" src="assets/images/clients/hex-lab.svg" alt="">
                             </a>
                         </li>
                         <li>
                             <a href="#" target="_blank">
-                                <img src="assets/images/clients/amara.svg" alt="">
+                                <img class="img" src="assets/images/clients/amara.svg" alt="">
                             </a>
                         </li>
                         <li>
                             <a href="#" target="_blank">
-                                <img src="assets/images/clients/muzica-2.svg" alt="">
+                                <img class="img" src="assets/images/clients/muzica-2.svg" alt="">
                             </a>
                         </li>
                         <li>
                             <a href="#" target="_blank">
-                                <img src="assets/images/clients/solaytic.svg" alt="">
+                                <img class="img" src="assets/images/clients/solaytic.svg" alt="">
                             </a>
                         </li>
                         <li>
                             <a href="#" target="_blank">
-                                <img src="assets/images/clients/hexa.svg" alt="">
+                                <img class="img" src="assets/images/clients/hexa.svg" alt="">
                             </a>
                         </li>
                         <li>
                             <a href="#" target="_blank">
-                                <img src="assets/images/clients/utosia-2.svg" alt="">
+                                <img class="img" src="assets/images/clients/utosia-2.svg" alt="">
                             </a>
                         </li>
                         <li>
                             <a href="#" target="_blank">
-                                <img src="assets/images/clients/fox-hub.svg" alt="">
+                                <img class="img" src="assets/images/clients/fox-hub.svg" alt="">
                             </a>
                         </li>
                     </ul>
@@ -216,8 +220,11 @@
     </section>
 
     <!-- Benefits -->
-    <div class="section">
+    <section class="section">
         <div class="container">
+            <h2 class="section__title">
+                <span>Our</span> benefits
+            </h2>
             <div class="benefits">
 
                 <div class="benefits__сol">
@@ -260,7 +267,7 @@
                 </div>
             </div><!--/. benefits -->
         </div><!--/. container -->
-    </div><!--/. section -->
+    </section> 
 
     <!-- Team -->
     <section class="section  section--gray">
