--- a/text.html
+++ b/text.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900|PT+Sans&display=swap&subset=cyrillic"
         rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CenterLogistic</title>
 </head>
 
@@ -14,7 +15,7 @@
     <header class="header">
         <div class="container">
             <div class="header__inner">
-                <a href="index.html"><img src="assets/images/logo.svg" alt="CenterLogistic"></a>
+                <a href="index.html"><img class="img" src="assets/images/logo.svg" alt="CenterLogistic"></a>
 
                 <nav class="nav">
                     <a class="nav__link" href="index.html">Home page</a>
@@ -22,6 +23,7 @@
                     <a class="nav__link active" href="text.html">Privacy Policy</a>
                     <a class="nav__link" href="#">Terma &amp Conditions</a>
                 </nav>
+                <button class="burger" type="button"><img class="burger__icon" src="assets/images/burger.svg" alt=""></button> 
             </div>
         </div>
     </header>
