--- a/blog.html
+++ b/blog.html
@@ -163,6 +163,12 @@
         </div><!--/. container -->
     </footer><!--/. footer -->
 
+
+
+        <!-- Javascript-->
+        <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.2.slim.min.js"></script>
+        <script src="assets/js/app.js"></script>
+        
 </body>
 
 </html>
