--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
 <body>
     <!-- Header -->
-    <header class="header">
+    <header class="header" id="header">
         <div class="container">
             <div class="header__inner">
                 <a href="index.html"><img class="img" src="assets/images/logo.svg" alt="CenterLogistic"></a>
 
                 <nav class="nav">
-                    <a class="nav__link active" href="#">Services</a>
-                    <a class="nav__link" href="#">Clients</a>
-                    <a class="nav__link" href="#">Benefits</a>
-                    <a class="nav__link" href="#">Team</a>
-                    <a class="nav__link" href="blog.html">News</a>
+                    <a class="nav__link active" href="#" data-scroll="#services">Services</a>
+                    <a class="nav__link" href="#" data-scroll="#clients">Clients</a>
+                    <a class="nav__link" href="#" data-scroll="#benefits">Benefits</a>
+                    <a class="nav__link" href="#" data-scroll="#team">Team</a>
+                    <a class="nav__link" href="#" data-scroll="#news">News</a>
                     <a class="nav__link" href="#">Contact Us</a>
                 </nav>
 
@@ -33,7 +33,7 @@
     </header>
 
     <!-- Intro -->
-    <div class="intro">
+    <div class="intro" id="intro">
         <div class="container">
             <div class="intro__inner">
 
@@ -78,7 +78,7 @@
     </div><!--/. Intro -->
 
     <!-- Services -->
-    <section class="section">
+    <section class="section" id="services">
         <div class="container">
             <div class="servises">
                 <h2 class="services__mail-title">
@@ -140,7 +140,7 @@
     </section>
 
     <!-- Clients -->
-    <section class="section  section--map">
+    <section class="section  section--map" id="clients">
         <div class="container">
             <h2 class="section__title"><span>Our</span> Clients</h2>
             <div class="clients">
@@ -220,7 +220,7 @@
     </section>
 
     <!-- Benefits -->
-    <section class="section">
+    <section class="section" id="benefits">
         <div class="container">
             <h2 class="section__title">
                 <span>Our</span> benefits
@@ -270,7 +270,7 @@
     </section> 
 
     <!-- Team -->
-    <section class="section  section--gray">
+    <section class="section  section--gray" id="team">
         <div class="container">
             <h2 class="section__title">
                 <span>Our</span> team
@@ -336,7 +336,7 @@
     </section>
 
     <!-- Mission -->
-    <section class="section">
+    <section class="section" id="mission">
         <div class="container">
             <h2 class="mission-title">Our Mission</h2>
             <div class="mission">
@@ -350,7 +350,7 @@
     </section><!--/. section -->
 
     <!-- News -->
-    <section class="section">
+    <section class="section" id="news">
         <div class="container">
             <h2 class="section__title"><span> Interesting</span> to read</h2>
 
@@ -465,6 +465,11 @@
                 </button>
         </div><!--/. modal_inner -->
     </div><!--/. modal -->
+
+
+    <!-- Javascript-->
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.2.slim.min.js"></script>
+    <script src="assets/js/app.js"></script>
 
 </body>
 
