--- a/blog.html
+++ b/blog.html
@@ -166,7 +166,7 @@
 
 
         <!-- Javascript-->
-        <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.2.slim.min.js"></script>
+        <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.2.min.js"></script>
         <script src="assets/js/app.js"></script>
         
 </body>
