--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
     <div class="intro" id="intro">
         <div class="intro__slider" id="introSlider">
             
-            <div>
+            <div class="slider-item">
                 <img class="intro__slider-photo" src="assets/images/intro-bg2.jpg" alt="">
             </div>
-            
-            <div>
+
+            <div class="slider-item">
                 <img class="intro__slider-photo" src="assets/images/blog-bg.jpg" alt="">
             </div>
 
@@ -208,17 +208,17 @@
                     </ul>
                 </div><!--/. clients__logos -->
 
-                <div class="clients__rewiews">
-                    <div class="rewiews">
-                        <div class="rewiews__item">
-                            <div class="rewiews__header">
-                                <img class="rewiews__photo" src="assets/images/review-photo.png" alt="">
-                                <div class="rewiews_header-content">
-                                    <div class="rewiews__name">Victor Matsakov</div>
-                                    <div class="rewiews__company">MULTI BOX Digital Agency</div>
+                <div class="clients__reviews">
+                    <div class="reviews" id="reviewsSlider">
+                        <div class="reviews__item">
+                            <div class="reviews__header">
+                                <img class="reviews__photo" src="assets/images/review-photo.png" alt="">
+                                <div class="reviews_header-content">
+                                    <div class="reviews__name">Victor Matsakov</div>
+                                    <div class="reviews__company">MULTI BOX Digital Agency</div>
                                 </div>
                             </div>
-                            <div class="rewiews__content">
+                            <div class="reviews__content">
                                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
                                     tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
                                     eos et accusam et justo duo dolores et ea rebum.</p>
@@ -228,8 +228,47 @@
                                     eos et accusam et justo duo dolores et ea rebum.</p>
                             </div>
                         </div>
-                    </div>
-                </div>
+
+                        <div class="reviews__item">
+                            <div class="reviews__header">
+                                <img class="reviews__photo" src="assets/images/review-photo.png" alt="">
+                                <div class="reviews_header-content">
+                                    <div class="reviews__name">Victor Matsakov</div>
+                                    <div class="reviews__company">MULTI BOX Digital Agency</div>
+                                </div>
+                            </div>
+                            <div class="reviews__content">
+                                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                                    tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
+                                    eos et accusam et justo duo dolores et ea rebum.</p>
+
+                                <p>Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam voluptua. At vero
+                                    eos et accusam et justo duo dolores et ea rebum.</p>
+                            </div>
+                        </div>
+
+                        <div class="reviews__item">
+                            <div class="reviews__header">
+                                <img class="reviews__photo" src="assets/images/review-photo.png" alt="">
+                                <div class="reviews_header-content">
+                                    <div class="reviews__name">Victor Matsakov</div>
+                                    <div class="reviews__company">MULTI BOX Digital Agency</div>
+                                </div>
+                            </div>
+                            <div class="reviews__content">
+                                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                                    tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
+                                    eos et accusam et justo duo dolores et ea rebum.</p>
+
+                                <p>Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam voluptua. At vero
+                                    eos et accusam et justo duo dolores et ea rebum.</p>
+                            </div>
+                        </div>
+
+                    </div><!--/. reviews -->
+                </div><!--/. clients__reviews -->
             </div><!--/. clients -->
 
             <button class="btn btn--orange btn--shadow" type="button" data-modal="#becomeClientModal">Become a client</button>
