--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,8 @@
                     <a class="nav__link" href="text.html">Privacy Policy</a>
                     <a class="nav__link" href="#">Terma &amp Conditions</a>
                 </nav>
-                <button class="burger" type="button"><img class="burger__icon" src="assets/images/burger.svg" alt=""></button> 
+                <button class="burger" type="button"><img class="burger__icon" src="assets/images/burger.svg"
+                        alt=""></button>
             </div>
         </div>
     </header>
@@ -165,10 +166,10 @@
 
 
 
-        <!-- Javascript-->
-        <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.2.min.js"></script>
-        <script src="assets/js/app.js"></script>
-        
+    <!-- Javascript-->
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.2.min.js"></script>
+    <script src="assets/js/app.js"></script>
+
 </body>
 
 </html>
