--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900|PT+Sans&display=swap&subset=cyrillic"
         rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/slick.css">
-        <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/slick.css">
+    <link rel="stylesheet" href="assets/css/aos.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CenterLogistic</title>
 </head>
@@ -28,7 +29,12 @@
                     <a class="nav__link" href="#">Contact Us</a>
                 </nav>
 
-                <button class="burger" type="button"><img class="burger__icon" src="assets/images/burger.svg" alt=""></button> 
+                <button class="burger" type="button" id="navToggle">
+                    <span class="burger__line" >1</span>
+                    <span class="burger__line" >2</span>
+                    <span class="burger__line" >3</span>
+                    <span class="burger__line" >4</span>
+                </button>
 
             </div>
         </div>
@@ -37,7 +43,7 @@
     <!-- Intro -->
     <div class="intro" id="intro">
         <div class="intro__slider" id="introSlider">
-            
+
             <div class="slider-item">
                 <img class="intro__slider-photo" src="assets/images/intro-bg2.jpg" alt="">
             </div>
@@ -50,7 +56,7 @@
         <div class="container">
             <div class="intro__inner">
 
-                <div class="reqest-form  reqest-form--intro">
+                <div class="reqest-form  reqest-form--intro" data-aos="fade-right">
                     <div class="reqest-form__header">
                         <div class="reqest-form__title">
                             <h3>Get Callback</h3>
@@ -75,22 +81,24 @@
                                 <span>Call me back</span>
                             </button>
                         </form>
-                    
+
                     </div>
 
                 </div>
-                    <div class="intro__text">
-                        <div class="intro__countries">USA, Europe, Asia</div>
-                        <h1 class="intro__title">
-                            <span class="intro__title-amp">&amp;</span>
-                            Trans<br>Logistic
-                        </h1>
-                    </div>
+                <div class="intro__text" data-aos="fade-left">
+                    <div class="intro__countries">USA, Europe, Asia</div>
+                    <h1 class="intro__title">
+                        <span class="intro__title-amp">&amp;</span>
+                        Trans<br>Logistic
+                    </h1>
+                </div>
 
-                    <div class="intro__slider-arrow">
-                        <button id="introSliderPrev" class="intro__slider-btn  intro__slider-btn--prev" type="button">Prev</button>
-                        <button id="introSliderNext" class="intro__slider-btn  intro__slider-btn--next" type="button">Next</button>
-                    </div>
+                <div class="intro__slider-arrow" data-aos="fade">
+                    <button id="introSliderPrev" class="intro__slider-btn  intro__slider-btn--prev"
+                        type="button">Prev</button>
+                    <button id="introSliderNext" class="intro__slider-btn  intro__slider-btn--next"
+                        type="button">Next</button>
+                </div>
 
             </div><!--/. Intro-inner -->
         </div><!--/. Container -->
@@ -104,7 +112,7 @@
                     Services
                 </h2>
 
-                <div class="services__item">
+                <div class="services__item" data-aos="fade-in">
                     <h4 class="services__title">
                         Ground Shipping
                     </h4>
@@ -117,7 +125,7 @@
                     </div>
                 </div>
 
-                <div class="services__item">
+                <div class="services__item" data-aos="fade-in" data-aos-delay="100">
                     <h4 class="services__title">
                         Railway Shipping
                     </h4>
@@ -129,7 +137,7 @@
                     </div>
                 </div>
 
-                <div class="services__item">
+                <div class="services__item" data-aos="fade-in" data-aos-delay="200">
                     <h4 class="services__title">
                         Water Shipping
                     </h4>
@@ -142,7 +150,7 @@
                     </div>
                 </div>
 
-                <div class="services__item">
+                <div class="services__item" data-aos="fade-in" data-aos-delay="300">
                     <h4 class="services__title">
                         Air Shipping
                     </h4>
@@ -271,7 +279,8 @@
                 </div><!--/. clients__reviews -->
             </div><!--/. clients -->
 
-            <button class="btn btn--orange btn--shadow" type="button" data-modal="#becomeClientModal">Become a client</button>
+            <button class="btn btn--orange btn--shadow" type="button" data-modal="#becomeClientModal">Become a
+                client</button>
             <span class="clients__love">we love our clients</span>
 
         </div><!--/. container -->
@@ -325,7 +334,7 @@
                 </div>
             </div><!--/. benefits -->
         </div><!--/. container -->
-    </section> 
+    </section>
 
     <!-- Team -->
     <section class="section  section--gray" id="team" data-scrollspy="#team">
@@ -450,8 +459,9 @@
         <div class="container">
             <img src="assets/images/logo-black.svg" alt="">
             <address class="footer__contacts">
-                <p>New York, Street, ZIP code</p> 
-                <p>Call Us: <a href="tel:+9948373123">+9948373123</a> or E-mail: <a href="mailto:hello@centerlogistic.com">hello@centerlogistic.com</a></p> 
+                <p>New York, Street, ZIP code</p>
+                <p>Call Us: <a href="tel:+9948373123">+9948373123</a> or E-mail: <a
+                        href="mailto:hello@centerlogistic.com">hello@centerlogistic.com</a></p>
             </address>
             <nav class="footer__nav">
                 <a href="#">Terms &amp; Contidions</a>
@@ -462,41 +472,42 @@
     </footer><!--/. footer -->
 
 
-    <!-- Modals --> 
+    <!-- Modals -->
     <div class="modal" id="becomeClientModal">
         <div class="modal__inner">
             <div class="modal__header">
-                <h4 class="modal__title"<p>Need to deliver your cargo?</p>
-                    <p>We can help!</p></h4>
-                    <div class="modal__text">Fill a little form and we will call you back!</div>
+                <h4 class="modal__title" <p>Need to deliver your cargo?</p>
+                    <p>We can help!</p>
+                </h4>
+                <div class="modal__text">Fill a little form and we will call you back!</div>
             </div>
-                <form class="form" action="/" method="post">
-                    <div class="form__group">
-                        <input class="input  input--dark input--user" type="text" placeholder="Your name">
-                    </div>
-                    <div class="form__group">
-                        <input class="input input--dark  input--phone" type="tel" placeholder="Your phone">
-                    </div>
-                    <div class="form__group">
-                        <input class="input input--dark  input--email" type="email" placeholder="Your email">
-                    </div>
-                    <button class="btn btn--block btn--orange" type="submit">
-                        Call me back
-                    </button>
-                </form> 
-
-                <div class="modal__footer">
-                     <h4 class="modal__footer-title">Our contacts</h4>
-                     <address class="modal__contacts">
-                        <p>New York, Street, ZIP code</p>
-                        <p>Phone: <a href="tel:+9948373123">+9948373123</a></p>
-                        <p>E-mail: <a href="mailto:hello@centerlogistic.com">hello@centerlogistic.com</a></p>
-                        </address>
+            <form class="form" action="/" method="post">
+                <div class="form__group">
+                    <input class="input  input--dark input--user" type="text" placeholder="Your name">
                 </div>
-
-                <button class="modal__close" type="button" data-modal-close="">
-                    <img src="assets/images/close.svg" alt="Close">
+                <div class="form__group">
+                    <input class="input input--dark  input--phone" type="tel" placeholder="Your phone">
+                </div>
+                <div class="form__group">
+                    <input class="input input--dark  input--email" type="email" placeholder="Your email">
+                </div>
+                <button class="btn btn--block btn--orange" type="submit">
+                    Call me back
                 </button>
+            </form>
+
+            <div class="modal__footer">
+                <h4 class="modal__footer-title">Our contacts</h4>
+                <address class="modal__contacts">
+                    <p>New York, Street, ZIP code</p>
+                    <p>Phone: <a href="tel:+9948373123">+9948373123</a></p>
+                    <p>E-mail: <a href="mailto:hello@centerlogistic.com">hello@centerlogistic.com</a></p>
+                </address>
+            </div>
+
+            <button class="modal__close" type="button" data-modal-close="">
+                <img src="assets/images/close.svg" alt="Close">
+            </button>
         </div><!--/. modal_inner -->
     </div><!--/. modal -->
 
@@ -506,21 +517,21 @@
                 <img class="modal__icon" src="assets/images/tick.svg" alt="">
                 <h4 class="modal__title"> Thanks for your request
                 </h4>
-                    <div class="modal__text">We call you back as soon as possible!</div>
+                <div class="modal__text">We call you back as soon as possible!</div>
             </div>
 
-                <div class="modal__footer">
-                     <h4 class="modal__footer-title">Our contacts</h4>
-                     <address class="modal__contacts">
-                        <p>New York, Street, ZIP code</p>
-                        <p>Phone: <a href="tel:+9948373123">+9948373123</a></p>
-                        <p>E-mail: <a href="mailto:hello@centerlogistic.com">hello@centerlogistic.com</a></p>
-                        </address>
-                </div>
+            <div class="modal__footer">
+                <h4 class="modal__footer-title">Our contacts</h4>
+                <address class="modal__contacts">
+                    <p>New York, Street, ZIP code</p>
+                    <p>Phone: <a href="tel:+9948373123">+9948373123</a></p>
+                    <p>E-mail: <a href="mailto:hello@centerlogistic.com">hello@centerlogistic.com</a></p>
+                </address>
+            </div>
 
-                <button class="modal__close" type="button">
-                    <img src="assets/images/close.svg" alt="Close">
-                </button>
+            <button class="modal__close" type="button">
+                <img src="assets/images/close.svg" alt="Close">
+            </button>
         </div><!--/. modal_inner -->
     </div><!--/. modal -->
 
@@ -528,6 +539,7 @@
     <!-- Javascript-->
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.2.min.js"></script>
     <script src="assets/js/slick.min.js"></script>
+    <script src="assets/js/aos.js"></script>
     <script src="assets/js/app.js"></script>
 
 </body>
