--- a/index.html
+++ b/index.html
@@ -215,6 +215,20 @@
                     <div class="reviews" id="reviewsSlider">
                         <div class="reviews__item">
                             <div class="reviews__header">
+                                <img class="reviews__photo" src="assets/images/review-photo.png" alt="">
+                                <div class="reviews__header-content">
+                                    <div class="reviews__name">Victor Matsakov</div>
+                                    <div class="reviews__company">Multi Box Digital agency</div>
+                                </div>
+                            </div>
+                            <div class="reviews__content">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium laboriosam eius perspiciatis molestiae aut repellat delectus fugiat veritatis maxime impedit harum accusamus, quas nihil laudantium minima ex sapiente. Error, repudiandae.</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium laboriosam eius perspiciatis molestiae aut repellat delectus fugiat veritatis maxime impedit harum accusamus, quas nihil laudantium minima ex sapiente. Error, repudiandae.</p>
+                            </div>
+                        </div>
+
+                        <div class="reviews__item">
+                            <div class="reviews__header">
                                 <img class="reviews__photo" src="https://placehold.it/100" alt="">
                                 <div class="reviews__header-content">
                                     <div class="reviews__name">John Smith</div>
@@ -240,6 +254,7 @@
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium laboriosam eius perspiciatis molestiae aut repellat delectus fugiat veritatis maxime impedit harum accusamus, quas nihil laudantium minima ex sapiente. Error, repudiandae.</p>
                             </div>
                         </div>
+
                     </div><!-- /.reviews -->
                 </div><!-- /.clients__reviews -->
             </div><!-- /.clients -->
@@ -291,7 +306,7 @@
                 </div><!-- /.benefits__col -->
 
                 <div class="benefits__col">
-                    <img class="img" src="assets/images/benefits-photo.jpg" alt="">
+                    <img class="img  img--skrugl" src="assets/images/benefits-photo.jpg" alt="">
                 </div>
             </div><!-- /.benefits -->
         </div><!-- /.container -->
@@ -307,7 +322,7 @@
             <div class="team">
                 <div class="team__col">
                     <div class="team__item" data-aos="fade-in">
-                        <img class="team__photo  img" src="assets/images/team/team-1.jpg" alt="">
+                        <img class="team__photo  img  img--skrugl" src="assets/images/team/team-1.jpg" alt="">
                         <div class="team__name">John Smith</div>
                         <div class="team__prof">Logistic manager - 8 years experience</div>
                         <ul class="team__contacts">
@@ -325,7 +340,7 @@
 
                 <div class="team__col">
                     <div class="team__item" data-aos="fade-in" data-aos-delay="100">
-                        <img class="team__photo  img" src="assets/images/team/team-2.jpg" alt="">
+                        <img class="team__photo  img  img--skrugl" src="assets/images/team/team-2.jpg" alt="">
                         <div class="team__name">Daniel Kore</div>
                         <div class="team__prof">Software engineer</div>
                         <ul class="team__contacts">
@@ -343,7 +358,7 @@
 
                 <div class="team__col">
                     <div class="team__item" data-aos="fade-in" data-aos-delay="200">
-                        <img class="team__photo  img" src="assets/images/team/team-3.jpg" alt="">
+                        <img class="team__photo  img  img--skrugl" src="assets/images/team/team-3.jpg" alt="">
                         <div class="team__name">Anna Filler</div>
                         <div class="team__prof">Marketing specialist - 10 years experience</div>
                         <ul class="team__contacts">
