--- a/text.html
+++ b/text.html
@@ -31,15 +31,18 @@
                     <img src="assets/images/logo.svg" alt="CenterLogistic">
                 </a>
 
-                <nav class="nav">
+                <nav class="nav" id="nav">
                     <a class="nav__link" href="index.html">Home</a>
                     <a class="nav__link" href="blog.html">Blog</a>
                     <a class="nav__link  active" href="text.html">Privacy Policy</a>
                     <a class="nav__link" href="text2.html">Terms &amp; Conditions</a>
                 </nav>
 
-                <button class="burger" type="button">
-                    <img class="burger__icon" src="assets/images/burger.svg" alt="">
+                <button class="burger" type="button" id="navToggle">
+                    <span class="burger__line">1</span>
+                    <span class="burger__line">2</span>
+                    <span class="burger__line">3</span>
+                    <span class="burger__line">4</span>
                 </button>
             </div>
         </div>
@@ -105,8 +108,8 @@
             </address>
 
             <nav class="footer__nav">
-                <a href="text.html">Terms &amp; Contidions</a>
-                <a href="text2.html">Privacy Policy</a>
+                <a href="text2.html">Terms &amp; Contidions</a>
+                <a href="text.html">Privacy Policy</a>
                 <a href="blog.html">Our blog</a>
             </nav>
         </div>
